--- a/index.html
+++ b/index.html
@@ -1,150 +1,249 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>SpotifyPesquisa</title>
+  <meta charset="UTF-8" />
+  <title>Pesquisa Spotify</title>
   <style>
     body {
-      background: linear-gradient(to bottom, #1DB954, #ffffff);
+      background-color: #f2f2f2;
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 40px;
-      margin: 0;
     }
-
     .card {
       background-color: white;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      max-width: 360px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      width: 320px;
       margin: auto;
-      padding: 24px;
+      padding: 20px;
     }
-
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .header img {
-      height: 28px;
+      height: 24px;
     }
-
     .header span {
-      background-color: #1DB954;
+      background-color: green;
       color: white;
-      padding: 6px 16px;
+      padding: 4px 12px;
       border-radius: 20px;
       font-weight: bold;
-      font-size: 16px;
     }
-
     .profile-img {
-      width: 140px;
-      border-radius: 12px;
+      width: 120px;
+      border-radius: 10px;
       margin: 20px 0;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-
     .reward-box {
-      background-color: #eaffea;
-      border: 2px dashed #1DB954;
+      background-color: #fffbe6;
+      border: 2px solid #ffd700;
       border-radius: 12px;
       padding: 20px;
       margin-bottom: 20px;
-    }
-
-    .reward-box h2 {
-      color: #1DB954;
-      margin: 10px 0 0;
-      font-size: 24px;
-    }
-
-    .question {
-      margin-bottom: 12px;
+      font-size: 18px;
+      color: green;
       font-weight: bold;
-      font-size: 16px;
     }
-
+    .question {
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
     .buttons {
       margin-bottom: 20px;
     }
-
     .buttons button {
-      padding: 10px 18px;
+      padding: 10px 20px;
       margin: 5px;
       border: none;
       border-radius: 8px;
       font-weight: bold;
       color: white;
       cursor: pointer;
-      font-size: 14px;
-      transition: 0.2s;
     }
-
     .btn-under-18 {
-      background-color: #1DB954;
+      background-color: #2ecc71;
     }
-
-    .btn-under-18:hover {
-      background-color: #14833b;
-    }
-
     .btn-over-18 {
-      background-color: #888;
+      background-color: #95a5a6;
     }
-
-    .btn-over-18:hover {
-      background-color: #555;
-    }
-
     .submit-btn {
-      background-color: #ffc107;
-      color: black;
-      padding: 14px 22px;
+      background-color: green;
+      color: white;
+      padding: 12px 20px;
       border: none;
       border-radius: 8px;
       font-size: 16px;
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: 0.3s;
     }
-
-    .submit-btn:hover {
-      background-color: #e0a800;
+    .notification {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #1DB954;
     }
-
   </style>
 </head>
 <body>
 
   <div class="card">
     <div class="header">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Logo">
-      <span>R$ 100,00</span>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Logo" />
+      <span id="total-reward">R$ 0,00</span>
     </div>
 
-    <img class="profile-img" src="https://i1.sndcdn.com/artworks-yWyLi84UGUcJ1pBb-e8rTjw-t500x500.jpg" alt="Matuê">
+    <img id="artist-img" class="profile-img" src="https://i1.sndcdn.com/artworks-yWyLi84UGUcJ1pBb-e8rTjw-t500x500.jpg" alt="Matuê" />
 
-    <div class="reward-box">
-      <img src="https://cdn-icons-png.flaticon.com/512/138/138292.png" width="40" alt="moeda">
-      <p>Você recebeu:</p>
-      <h2>R$ 33,00</h2>
+    <div class="reward-box" id="reward-box" style="display:none;">
+      Você recebeu: <span id="reward-value">R$ 0,00</span>
     </div>
 
-    <div class="question">
-      Qual faixa etária mais escuta o Matuê?
+    <div class="question" id="question-text">
+      Qual faixa etária você acha que mais escuta o cantor Matuê?
     </div>
 
-    <div class="buttons">
-      <button class="btn-under-18">-18 anos</button>
-      <button class="btn-over-18">+18 anos</button>
+    <div class="buttons" id="buttons-container">
+      <button class="btn-under-18" data-value="-18">-18 anos</button>
+      <button class="btn-over-18" data-value="+18">+18 anos</button>
     </div>
 
-    <button class="submit-btn">ENVIAR E GANHAR</button>
+    <button class="submit-btn" id="submit-btn" disabled>Enviar respostas</button>
+
+    <div class="notification" id="notification"></div>
   </div>
+
+<script>
+  // Perguntas do quiz
+  const questions = [
+    {
+      artist: "Matuê",
+      image: "https://i1.sndcdn.com/artworks-yWyLi84UGUcJ1pBb-e8rTjw-t500x500.jpg",
+      question: "Qual faixa etária você acha que mais escuta o cantor Matuê?",
+      options: [
+        { label: "-18 anos", value: "-18" },
+        { label: "+18 anos", value: "+18" }
+      ]
+    },
+    {
+      artist: "Ludmilla",
+      image: "https://i.scdn.co/image/ab6761610000e5ebc50e732dc1835a4b492aeff7",
+      question: "Você recomenda Ludmilla para seus amigos?",
+      options: [
+        { label: "Sim", value: "sim" },
+        { label: "Não", value: "nao" },
+        { label: "Talvez", value: "talvez" }
+      ]
+    },
+    {
+      artist: "Anitta",
+      image: "https://i.scdn.co/image/ab6761610000e5ebc682982688c435efc32a152f",
+      question: "Com que frequência você escuta Anitta?",
+      options: [
+        { label: "Raramente", value: "raramente" },
+        { label: "De vez em quando", value: "devezemquando" },
+        { label: "Todo dia", value: "todoDia" }
+      ]
+    },
+    {
+      artist: "Djonga",
+      image: "https://i.scdn.co/image/ab6761610000e5eb05e08eae36d7d1036a6a7b57",
+      question: "Você gosta do estilo musical do Djonga?",
+      options: [
+        { label: "Pouco", value: "pouco" },
+        { label: "Mais ou Menos", value: "maisOuMenos" },
+        { label: "Muito", value: "muito" }
+      ]
+    }
+  ];
+
+  let currentQuestionIndex = 0;
+  let totalReward = 0;
+  let selectedOption = null;
+
+  const artistImg = document.getElementById("artist-img");
+  const questionText = document.getElementById("question-text");
+  const buttonsContainer = document.getElementById("buttons-container");
+  const submitBtn = document.getElementById("submit-btn");
+  const rewardBox = document.getElementById("reward-box");
+  const rewardValue = document.getElementById("reward-value");
+  const totalRewardSpan = document.getElementById("total-reward");
+  const notification = document.getElementById("notification");
+
+  function loadQuestion(index) {
+    selectedOption = null;
+    submitBtn.disabled = true;
+    notification.textContent = "";
+    rewardBox.style.display = "none";
+
+    const q = questions[index];
+    artistImg.src = q.image;
+    questionText.textContent = q.question;
+
+    // Remove todos os botões
+    while (buttonsContainer.firstChild) {
+      buttonsContainer.removeChild(buttonsContainer.firstChild);
+    }
+    // Adiciona os botões das opções
+    q.options.forEach(opt => {
+      const btn = document.createElement("button");
+      btn.textContent = opt.label;
+      btn.className = "submit-btn"; // estilo igual ao botão enviar, só que menor?
+      btn.style.margin = "5px";
+      btn.style.padding = "10px 15px";
+      btn.style.fontWeight = "bold";
+      btn.style.borderRadius = "8px";
+      btn.style.border = "none";
+      btn.style.cursor = "pointer";
+      btn.style.backgroundColor = "#2ecc71";
+      btn.style.color = "white";
+      btn.dataset.value = opt.value;
+
+      btn.onclick = () => {
+        selectedOption = opt.value;
+        // Marca o botão selecionado
+        Array.from(buttonsContainer.children).forEach(b => b.style.opacity = 0.5);
+        btn.style.opacity = 1;
+        submitBtn.disabled = false;
+      };
+      buttonsContainer.appendChild(btn);
+    });
+  }
+
+  submitBtn.addEventListener("click", () => {
+    if (!selectedOption) return;
+
+    // Gera um valor aleatório entre 35 e 48
+    const reward = (Math.random() * (48 - 35) + 35).toFixed(2);
+    totalReward += parseFloat(reward);
+
+    rewardValue.textContent = `R$ ${reward}`;
+    rewardBox.style.display = "block";
+
+    totalRewardSpan.textContent = `R$ ${totalReward.toFixed(2)}`;
+
+    notification.textContent = `Você ganhou R$ ${reward} por responder!`;
+
+    currentQuestionIndex++;
+
+    if (currentQuestionIndex >= questions.length) {
+      // Fim das perguntas
+      questionText.textContent = "Obrigado por participar da pesquisa!";
+      buttonsContainer.style.display = "none";
+      submitBtn.style.display = "none";
+      artistImg.style.display = "none";
+      notification.textContent = `Você ganhou um total de R$ ${totalReward.toFixed(2)}!`;
+    } else {
+      setTimeout(() => {
+        loadQuestion(currentQuestionIndex);
+      }, 1500);
+    }
+  });
+
+  loadQuestion(currentQuestionIndex);
+</script>
 
 </body>
 </html>
